--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffee-challenge",
+  "name": "coffee-shop",
   "version": "1.0.0",
   "description": "Coffee Shop Node.js Application",
   "main": "app.js",
