--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ammar Ali Khan",
-  "license": "ISC",
+  "license": "GNU",
   "dependencies": {
     "axios": "^0.26.1",
     "lodash": "^4.17.21"
